syntax = "proto3";

package ggithub.com.wdevarshi;

option go_package = "github.com/wdevarshi/InternalTransfersSystem/proto;internaltransferssystem";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://github.com/wdevarshi/InternalTransfersSystem";
    description: "InternalTransfersSystem repository";
  }
  schemes: HTTP;
  schemes: HTTPS;
};

message EchoRequest{
  string msg = 1;
}
message EchoResponse{
  string msg = 1;
}

message CreateAccountRequest{
  string account_id = 1;
  double initial_balance = 2;
}
message CreateAccountResponse{
}

message GetAccountRequest{
  string account_id = 1;
}
message GetAccountResponse{
  string account_id = 1;
  double balance = 2;
}

message TransactionSubmissionRequest{
  string from_account_id = 1;
  string to_account_id = 2;
  double amount = 3;
}
message TransactionSubmissionResponse{
}

service InternalTransfersSystem {
  //LivenessProbe for the service
  rpc HealthCheck(google.protobuf.Empty) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/healthcheck"
    };
  }

  //ReadinessProbe for the service
  rpc ReadyCheck(google.protobuf.Empty) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/readycheck"
    };
  }


  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/api/v1/example/echo"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Echo endpoint"
      description: "Provides an echo reply endpoint."
      tags: "echo"
    };
  }

  rpc Error(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/api/v1/example/error"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Error endpoint"
      description: "Request made to this endpoint result in errors."
      tags: "error"
    };
  }

  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/api/v1/account/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create Account endpoint with initial balance"
      description: "This endpoint is used to create an account with an initial balance."
    };
  }


  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {
    option (google.api.http) = {
      post: "/api/v1/account/get"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Account endpoint"
      description: "This endpoint is used to get account details."
    };
  }

  rpc TransactionSubmission(TransactionSubmissionRequest) returns (TransactionSubmissionResponse) {
    option (google.api.http) = {
      post: "/api/v1/transaction/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create Transaction endpoint"
      description: "This endpoint is used to create a transaction. This will be a synchronous call and ensures consistency."
    };
  }
}
